--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -86,7 +86,8 @@ jobs:
     - name: Set env
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-        echo "tag: ${{ env.RELEASE_VERSION }}"
+        echo "tag: ${{ env.$GITHUB_ENV }}"
+        echo ${GITHUB_REF}
     #- uses: actions/setup-node@v2
     #  name: Instalar nodejs
     #  with:
