--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -87,7 +87,7 @@ jobs:
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         echo "tag: ${{ env.$GITHUB_ENV }}"
-        echo ${GITHUB_REF}
+        "echo ${GITHUB_REF}"
     #- uses: actions/setup-node@v2
     #  name: Instalar nodejs
     #  with:
