--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -86,6 +86,7 @@ jobs:
     - name: Set env
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        printenv
         echo "tag: ${{ env.GITHUB_ENV }}"
         "echo ${GITHUB_REF}"
     #- uses: actions/setup-node@v2
