--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -87,7 +87,8 @@ jobs:
       run: |
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         printenv
-        echo "tag: ${{ env.GITHUB_ENV }}"
+        cat $GITHUB_ENV
+        echo "tag: ${{ env.GITHUB_REF_NAME }}"
         "echo ${GITHUB_REF}"
     #- uses: actions/setup-node@v2
     #  name: Instalar nodejs
