--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -85,10 +85,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Set env
       run: |
+        echo $GITHUB_REF_NAME
         echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
         printenv
         cat $GITHUB_ENV
-        echo "tag: ${{ env.GITHUB_REF_NAME }}"
+        echo "tag: ${RELEASE_VERSION}"
         "echo ${GITHUB_REF}"
     #- uses: actions/setup-node@v2
     #  name: Instalar nodejs
