--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -17,6 +17,7 @@ jobs:
       with:
         java-version: 8
         distribution: 'adopt'
+        cache: 'maven'
     - name: Configurar settings.xml
       uses: whelk-io/maven-settings-xml-action@v20
       with:
