--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -88,6 +88,7 @@ jobs:
       with:
         node-version: '10'
         cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
     - name: Construir Frontend
       run: | 
         sh frontend/docker/nginx/build.sh
