--- a/charts/madre/Chart.yaml
+++ b/charts/madre/Chart.yaml
@@ -1,7 +1,7 @@
 name: abaco
 version: 1.0.3
 appVersion: 2.8.2
-description: Ábaco: Sistema de gestão e execução da Análise de Pontos de Função.
+description: "Ábaco: Sistema de gestão e execução da Análise de Pontos de Função."
 keywords:
 - ABACO
 - APF
