--- a/charts/abaco/requirements.yaml
+++ b/charts/abaco/requirements.yaml
@@ -4,9 +4,10 @@ dependencies:
     repository: 'http://element.basis.com.br/repository/commons-helm/'
   - name: postgresql
     version: 8.6.1
-    repository: https://kubernetes-charts.storage.googleapis.com
+    repository: https://charts.helm.sh/stable
     condition: postgresql.install
   - name: elasticsearch
     version: 1.32.4
-    repository: https://kubernetes-charts.storage.googleapis.com
+    repository: https://charts.helm.sh/stable
     condition: elasticsearch.install
+
